# agent-prompt-templates

./: LICENSE  README.md  pyproject.toml
src/agent_prompt_templates/: __init__.py  base.py
src/agent_prompt_templates/prompts/: __init__.py  cot.py  fewshot.py  react.py  sft.py  system.py  tot.py
tests/: test_prompts.py
