[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-prompt-templates"
version = "0.1.0"
description = "Reusable prompt templates for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PHclaw", email = "168465420@qq.com"}
]
requires-python = ">=3.9"
keywords = ["ai", "agent", "prompt", "llm", "templates"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]